set(TARGET LiquidLib-1.1.0) 
cmake_minimum_required(VERSION 3.31)
project("Liquidlib" C CXX)
set(VERSION 1.1.4)
set(SOV 1)
include(CheckIncludeFileCXX)
find_package(GSL)
find_package(Boost COMPONENTS math )
find_package(xdrfile)
include(GNUInstallDirs)
include_directories(Trajectory/include/
MeanSquaredDisplacement/include/
${xdrfile_INCLUDE_DIRS})

if(xdrfile_FOUND)
	set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DGROMACS" CACHE STRING "Set C++ Compiler Flags xdrfile " FORCE)
endif()

set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DOMP -fopenmp" CACHE STRING "Set C++ Compiler Flags openmp" FORCE)

if(GSL_FOUND)
	set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DGSL" CACHE STRING "Set C++ Compiler Flags GSL" FORCE)
endif()

if(Boost_FOUND)
	set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DBOOST" CACHE STRING "Set C++ Compiler Flags boost" FORCE)
endif()
add_subdirectory(BondOrderParameter)
add_subdirectory(CoherentIntermediateScattering)
add_subdirectory(CoherentVanHoveFunction)
add_subdirectory(ConvertTrajectoryType)
add_subdirectory(FourPointCorrelation)
add_subdirectory(MeanSquaredDisplacement)
add_subdirectory(NonGaussianParameter)
add_subdirectory(PairDistributionFunction)
add_subdirectory(SelfIntermediateScattering)
add_subdirectory(SelfVanHoveFunction)
add_subdirectory(StructureFactor)
add_subdirectory(Trajectory)
add_subdirectory(VelocityAutoCorrelation)
install(FILES gui/LiquidLib_logo.gif
DESTINATION ${CMAKE_INSTALL_DATADIR}/LiquidLib)
install(PROGRAMS gui/LiquidLib.gui.py TYPE LIBEXEC)
install(PROGRAMS gui/LiquidLib TYPE BIN)
install(FILES Manual.pdf TYPE DOC)
